# JobHunter

./: .gitignore  README.md  pyproject.toml  setup.bat  zip-py.bat
src/: app.py  downloadChromeDriver.py  humanLikeBrowser.py  log_wrapper.py  main.py  models.py
src/linkedIn/: home_page.py  linkedIn_site.py  login_page.py
